--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,7 +1,7 @@
 html {
-    background-color: rgba(27, 38, 54, 1);
+    background-color: rgb(13, 16, 23);
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 body {
