--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,24 +1,22 @@
 html {
-    background-color: rgb(13, 16, 23);
+
     text-align: center;
-    color: rgb(255, 255, 255);
+
 }
 
 body {
     margin: 0;
     color: white;
-    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-@font-face {
-    font-family: "Nunito";
+/* @font-face {
+    font-family: "Mono";
     font-style: normal;
     font-weight: 400;
     src: local(""),
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
-}
+} */
 
 #app {
     height: 100vh;
