--- a/frontend/src/assets/global.css
+++ b/frontend/src/assets/global.css
@@ -1,10 +1,25 @@
 html {
-    background-color: rgba(9, 11, 15, 0.99) !important;
-    background-size: cover;
-    overflow-y: hidden !important; 
-}
-  
-body {
-    color: white;
+    overflow: hidden !important;
+    width: 100%;
+    height: 100%;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(15, 15, 17, 0.992);
+    filter: blur(10px);
+}
