--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -47,3 +47,7 @@ body::before {
 .center {
     justify-content: center;
 }
+
+.p-tooltip-arrow {
+    border-left-color: transparent !important;
+}
